<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_text"
    tools:context=".activity.MainActivity">
    <FrameLayout
        android:layout_alignParentTop="true"
        android:id="@+id/fragment"
        android:layout_marginBottom="@dimen/Margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nav_btn"/>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/fragment"
        android:background="@color/light_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/nav_btn"
        android:layout_marginTop="@dimen/Margin"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/location_btn"
            style="@style/BottomMenuButton"
            android:drawableTop="@drawable/ic_location_unmarked"
            android:text="@string/location_btn_text"/>
        <Button
            android:id="@+id/marked_list_btn"
            style="@style/BottomMenuButton"
            android:drawableTop="@drawable/ic_checklist"
            android:text="@string/marked_list_btn_text" />

        <Button
            android:id="@+id/search_btn"
            style="@style/BottomMenuButton"
            android:drawableTop="@drawable/ic_search"
            android:text="@string/search_btn_text" />

        <Button
            android:id="@+id/category_btn"
            style="@style/BottomMenuButton"
            android:drawableTop="@drawable/ic_list"
            android:text="@string/category_btn_text" />

        <Button
            android:id="@+id/home_btn"
            style="@style/BottomMenuButton"
            android:drawableTop="@drawable/ic_home"
            android:text="@string/home_btn_text" />
    </LinearLayout>


</RelativeLayout>