<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/settingDialogMargin"
        android:textSize="@dimen/titleTextSize"
        android:text="@string/home_stores_tv"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/settingDialogMargin"
        android:layout_below="@id/title"
        android:id="@+id/checkbox_layout">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:checked="false"
        android:enabled="false"
        android:layout_gravity="end"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/smallTextSize"
        android:text="@string/canbo_text"
        android:id="@+id/canbo_check"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/hyperstar_text"
        android:checked="false"
        android:enabled="false"
        android:layout_gravity="end"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/smallTextSize"
        android:id="@+id/hyperstar_check"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/etka_text"
        android:checked="false"
        android:enabled="false"
        android:layout_gravity="end"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/smallTextSize"
        android:id="@+id/etka_check"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/refah_text"
        android:checked="false"
        android:enabled="false"
        android:layout_gravity="end"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/smallTextSize"
        android:id="@+id/refah_check"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view"
        android:layout_margin="@dimen/settingDialogMargin"
        android:background="@color/light_gray"
        android:layout_below="@id/checkbox_layout"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_margin="@dimen/settingDialogMargin"
        android:textSize="@dimen/mediumTextSize"
        android:textColor="@color/dark_gray"
        android:id="@+id/stock_switch"
        android:text="@string/stock_text"
        android:layout_below="@id/view"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view2"
        android:layout_below="@id/stock_switch"
        android:layout_margin="@dimen/settingDialogMargin"
        android:background="@color/light_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:id="@+id/price_layout"
        android:layout_margin="@dimen/settingDialogMargin"
        android:layout_below="@id/view2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_range"
            android:textSize="@dimen/largeTextSize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar_text"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/largeTextSize"
            android:layout_marginRight="@dimen/menuMargin"
            android:text="@string/seekbar_max_price" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatSeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/settingDialogMargin"
        android:max="90"
        android:progress="90"
        android:thumb="@drawable/ic_circle"
        android:focusable="true"
        style="@style/Widget.AppCompat.SeekBar"
        android:id="@+id/price_range"
        android:layout_below="@id/price_layout"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/mediumTextSize"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:id="@+id/close_filter_dialog"
        android:text="@string/close_dialog_btn"
        android:layout_margin="@dimen/settingDialogMargin"
        android:layout_below="@id/price_range"
        android:layout_alignParentStart="true"/>


</RelativeLayout>