<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="vertical">

        <android.support.design.widget.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:id="@+id/navigation_menu">


            <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/menuPadding">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sorting_tv"
                    android:textSize="@dimen/largeTextSize"
                    android:layout_marginRight="@dimen/largeTextSize"
                    android:layout_marginBottom="@dimen/menuMargin"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/menuMargin"
                        android:layout_marginBottom="@dimen/menuMargin"
                        android:checked="true"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/smallTextSize"
                        android:text="@string/default_radio_text"
                        android:layoutDirection="rtl"
                        android:layout_gravity="right"
                        android:id="@+id/default_radio"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/menuMargin"
                        android:layout_marginBottom="@dimen/menuMargin"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/smallTextSize"
                        android:text="@string/less_price_radio_text"
                        android:layoutDirection="rtl"
                        android:layout_gravity="right"
                        android:id="@+id/less_price_radio"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/menuMargin"
                        android:layout_marginBottom="@dimen/menuMargin"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/smallTextSize"
                        android:text="@string/most_discount_radio_text"
                        android:layoutDirection="rtl"
                        android:layout_gravity="right"
                        android:id="@+id/most_discount_radio"/>

                </RadioGroup>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/menuMargin"
                    android:background="@color/light_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layoutDirection="rtl"
                    android:layout_margin="@dimen/menuMargin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_range"
                        android:textSize="@dimen/largeTextSize"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/seekbar_text"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/largeTextSize"
                        android:layout_marginRight="@dimen/menuMargin"
                        android:text="@string/seekbar_max_price" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menuMargin"
                    android:max="90"
                    android:progress="90"
                    android:thumb="@drawable/ic_circle"
                    android:focusable="true"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:id="@+id/price_range" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/menuMargin"
                    android:background="@color/light_gray"/>
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_margin="@dimen/menuMargin"
                    android:textSize="@dimen/mediumTextSize"
                    android:textColor="@color/dark_gray"
                    android:id="@+id/stock_switch"
                    android:text="@string/stock_text"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/menuMargin"
                    android:background="@color/light_gray"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menuMargin"
                    android:textSize="@dimen/largeTextSize"
                    android:text="@string/home_stores_tv"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:checked="false"
                    android:enabled="false"
                    android:layout_margin="@dimen/menuMargin"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/smallTextSize"
                    android:text="@string/canbo_text"
                    android:id="@+id/canbo_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/hyperstar_text"
                    android:checked="false"
                    android:enabled="false"
                    android:textColor="@color/dark_gray"
                    android:layout_margin="@dimen/menuMargin"
                    android:textSize="@dimen/smallTextSize"
                    android:id="@+id/hyperstar_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/etka_text"
                    android:checked="false"
                    android:enabled="false"
                    android:layout_margin="@dimen/menuMargin"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/smallTextSize"
                    android:id="@+id/etka_check"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/refah_text"
                    android:checked="false"
                    android:enabled="false"
                    android:layout_margin="@dimen/menuMargin"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/smallTextSize"
                    android:id="@+id/refah_check"/>



            </LinearLayout>



        </android.support.design.widget.NavigationView>

    </LinearLayout>
</ScrollView>