<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_layout"
    android:orientation="vertical">

    <include layout="@layout/connection_error_layout"/>
    <include layout="@layout/data_loading_layout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/Padding"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_more_tv"
                    android:textSize="@dimen/titleTextSize"
                    android:textColor="@color/gray"
                    android:id="@+id/discounts_more_tv" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_discounts_tv"
                    android:textSize="@dimen/titleTextSize"
                    android:layout_weight="1" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/home_recycler_discounts"
                android:layoutDirection="rtl"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_stores_tv"
                android:textSize="@dimen/titleTextSize"
                android:padding="@dimen/Padding"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/home_recycler_stores"
                android:layoutDirection="rtl"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_brands_tv"
                android:textSize="@dimen/titleTextSize"
                android:padding="@dimen/Padding" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:id="@+id/home_recycler_brands"/>




        </LinearLayout>
    </ScrollView>

</LinearLayout>